[package]
name = "pseudos"
version = "0.1.0"
authors = ["Joshua Worth <joshua@worth.id.au>"]
edition = "2018"

[dependencies]
libpseudos = {path = "../libpseudos", version = "*"}
xachtsechs = {path = "../../xachtsechs/xachtsechs", version = "*"}

[dependencies.sdl2]
version = "0.31.0"
features = ["image"]
